[package]
name = "jump-start"
description = "The CLI for jump-start: A shortcut to your favorite code"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
glob = "0.3.2"
handlebars = "6.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.10.1"

[[bin]]
name = "jump-start"
path = "src/main.rs"
