[package]
name = "jump-start"
description = "The CLI for jump-start: A shortcut to your favorite code"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
reqwest = { version = "0.11", features = ["blocking"] }
glob = "0.3.2"
handlebars = "6.3.1"
notify = "4.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
log = "0.4"
flate2 = "1.1.0"
tar = "0.4.44"

[dev-dependencies]
tempfile = "3.10.1"

[[bin]]
name = "jump-start"
path = "src/main.rs"
